static-files/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels: 
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - image: nginx:alpine
          name: webserver
          # This is only informative, the executable decides the ports
          ports:
            - containerPort: 80
              name: "http"
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
      volumes:
        - name: data
          hostPath: 
            path: /gazda/anargyroi/book
            type: Directory
